@@ -25,6 +25,9 @@ repositories {
 			includeGroup("com.rbasamoyai")
 		}
 	}
+	flatDir {
+		dir "./libs"
+	}
 }
 
 dependencies {
@@ -41,7 +44,7 @@ dependencies {
 
 	annotationProcessor(implementation("io.github.llamalad7:mixinextras-common:${mixinextras_version}")) // MixinExtras
 
-	modImplementation("com.rbasamoyai:ritchiesprojectilelib:${rpl_version}+${minecraft_version}-common") { transitive = false } // Ritchie's Projectile Library
+	modImplementation("com.rbasamoyai:ritchiesprojectilelib:${rpl_version}+mc.${minecraft_version}-common-build.${rpl_build}") { transitive = false } // Ritchie's Projectile Library
 
 	modImplementation("curse.maven:copycats-968398:${copycats_fabric_file}")
 }
